# OS_Labs

./: .gitignore
KP/: CMakeLists.txt  Makefile
Lab1_var6/: Makefile  child  child.c  child.out  output.txt  parent  parent.c  parent.out
Lab2_var4/: main  main.cpp
Lab3_var6/: Makefile  child  child.c  file.txt  parent  parent.c  report.md
Lab4_var1/: libmethod1.dylib  libmethod2.dylib  method1.c  method1.h  method2.c  program1  program1.c  program2  program2.c  task.md
Lab5_var47/: BinarySearchTree.cpp  CMakeLists.txt  CommandHandler.cpp  Stopwatch.cpp  Task.md  client  client.cpp  compute.cpp  control.cpp  main  makefile
Lab5_var47/cppzmq-master/: CMakeLists.txt  README.md  cppzmq.pc.in
Lab5_var47/cppzmq-master/.github/workflows/: ci.yml
Lab5_var47/cppzmq-master/examples/: CMakeLists.txt  hello_world.cpp  pubsub_multithread_inproc.cpp
Lab5_var47/cppzmq-master/libzmq-pkg-config/: FindZeroMQ.cmake
Lab5_var47/cppzmq-master/tests/: CMakeLists.txt  active_poller.cpp  buffer.cpp  codec_multipart.cpp  context.cpp  message.cpp  monitor.cpp  multipart.cpp  poller.cpp  recv_multipart.cpp  send_multipart.cpp  socket.cpp  socket_ref.cpp  testutil.hpp  utilities.cpp
delete_later/: a.out  new  new.c  test.txt  z.c
delete_later/Lab4_var1/: Task.md  dynamic_loader  dynamic_loader.c  libmath.c  libmath.dylib  math_library.h  math_library_rect.c  math_library_trap.c  test_program1.c  test_program2.c
